added CSS utils

--- a/css/style.css
+++ b/css/style.css
@@ -1,190 +1,6 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 600px;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-.header-bg {
-  background: #000000;
-}
-
-.header {
-  max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin: 0 auto;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 60px;
-}
-
-.header-menu a {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  display: inline-block;
-  position: relative;
-  color: #ffffff;
-  padding: 16px 0;
-  font-size: 1.125rem;
-}
-
-.header-menu a::after {
-  content: "";
-  position: absolute;
-  display: block;
-  height: 2px;
-  width: 0px;
-  background: #ffffff;
-  transition: all 0.3s;
-}
-.header-menu a:hover::after {
-  width: 100%;
-}
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px;
-  }
-  .header-menu a {
-    background: #111111;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover {
-    background: #2e2e2e;
-  }
-  .header-menu a::after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 0.875rem;
-  }
-}
-
-.introducao-bg {
-  background: #000000;
-  color: #ffffff;
-  box-shadow: inset 0 -120px white;
-}
-
-.introducao {
-  max-width: 1200px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 0 auto;
-  padding: 0 20px;
-  gap: 0px 40px;
-}
-
-.introducao-conteudo {
-  align-self: flex-end;
-  padding-bottom: 200px;
-}
-.introducao img {
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-}
-.introducao h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  margin-bottom: 32px;
-  font-size: 4rem;
-  line-height: 1.125;
-}
-
-.introducao p {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  margin-bottom: 25px;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  color: #b2b2b2;
-}
-.color-yellow {
-  color: #ffbb00;
-}
-
-.introducao a {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  padding: 16px 32px;
-  border-radius: 4px;
-  color: #332200;
-  text-transform: uppercase;
-  box-shadow: 0px, 1px 2px, rgba(0, 0, 0, 0.1);
-  background: linear-gradient(#ffbf00, #f2a50c);
-  font-size: 1.125rem;
-  line-height: 1.33;
-}
-
-.introducao a:hover {
-  background: linear-gradient(#ffb600, #e59317);
-}
-
-@media (max-width: 600px) {
-  .introducao a {
-    padding: 12px 16px;
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 3rem;
-  }
-  .introducao p {
-    font-size: 1.125rem;
-  }
-}
-
-@media (max-width: 800px) {
-  .introducao-bg {
-    background: #111111;
-    padding-top: 40px;
-    box-shadow: inset 0 -60px white;
-  }
-  .introducao {
-    grid-template-columns: 1fr;
-    gap: 40px;
-  }
-  .introducao h1 {
-    font-size: 2rem;
-    margin-bottom: 16px;
-  }
-  .introducao-conteudo {
-    padding-bottom: 0px;
-  }
-}
+@import "./global/global.css";
+@import "./utils/cores.css";
+@import "./utils/tipografia.css";
+@import "./global/header.css";
+@import "./utils/componentes.css";
+@import "./home/introducao.css";
